# cmake-opencv-qt5

./: CMakeLists.txt  Canny.cpp  Cartoonifier.cpp  cornerfinder.cpp  featuredetector.cpp  filters.cpp  imagehandler.cpp  laplace.cpp  mainwindow.h  watershed.cpp
src/: Canny.cpp  Cartoonifier.cpp  cornerfinder.cpp  edgedetectwindow.cpp  facerecognizer.cpp  featuredetector.cpp  featurewindow.cpp  filters.cpp  grabcut.cpp  imagehandler.cpp  imageholder.cpp  laplace.cpp  mainwindow.cpp  morpher.cpp  pixelate.cpp  projectivetransforms.cpp  rippleeffect.cpp  sobel.cpp  watershed.cpp  watershedsegmenter.cpp
